src/test/ui/borrowck/issue-7573.nll.stderr
warning: not reporting region error due to nll
  --> $DIR/issue-7573.rs:27:31
   |
LL |     let mut lines_to_use: Vec<&CrateId> = Vec::new();
   |                               ^

error: unsatisfied lifetime constraints
  --> $DIR/issue-7573.rs:32:9
   |
LL |     let mut lines_to_use: Vec<&CrateId> = Vec::new();
   |         ---------------- lifetime `'2` appears in the type of `lines_to_use`
LL |         //~^ NOTE cannot infer an appropriate lifetime
LL |     let push_id = |installed_id: &CrateId| {
   |                                  - let's call the lifetime of this reference `'1`
...
LL |         lines_to_use.push(installed_id);
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ argument requires that `'1` must outlive `'2`

error: aborting due to previous error

